# mracket

./: .gitignore  README.md  checks.sh  pyproject.toml  tests.sh
.github/workflows/: ci.yaml
examples/: boolean.rkt  config.json  distance.rkt  factorial.rkt
mracket/: __init__.py  __main__.py
mracket/integration_tests/: mutation_score_test.py  test_mutation_score.py
mracket/mutation/: __init__.py  applier.py  mutator.py  mutator_test.py
mracket/mutation/generator/: __init__.py  base.py  procedure_application_replacement.py  procedure_application_replacement_test.py  procedure_replacement.py  procedure_replacement_test.py  test_procedure_replacement.py
mracket/reader/: errors.py  lexer.py  lexer.rkt  lexer_test.py  parser.py  parser_test.py  stringify.py  syntax.py
mracket/reader/integration_tests/: lexer_integration_test.py  reader_integration_test.py
mracket/runner/: __init__.py  execution.py  logger.py  output.py  output_test.py  result.py  score.py
mracket/test/: __init__.py
mracket/test/generator/: utils.py
mracket/test/inputs/: .gitignore  __init__.py  racket-0.rkt  racket-1.rkt  racket-2.rkt  score-0.rkt  score-1.rkt  score-2.rkt  test-case-0-0.rkt  test-case-0-1.rkt  test-case-0-2.rkt  test-case-1-0.rkt  test-case-2-0.rkt  test-case-2-1.rkt  test-case-3-0.rkt
mracket/test_fixtures/inputs/: __init__.py
